--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Frontend Developer Portfolio of Shweta Tiwari">
+    <meta name="keywords" content="Frontend Developer, Shweta Tiwari, Portfolio, HTML, CSS">
+    <meta name="author" content="Shweta Tiwari">
+
     <title>Shweta Tiwari | Frontend Developer Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -32,7 +37,7 @@
         <section id="about">
             <div class="container about-content">
                 <h2>About me</h2>
-                <img src="MyPicture.jpeg" alt="Shweta Tiwari" style="width: 115px; height: 115px;">
+                <img src="MyPicture.jpeg" alt="Portrait of Shweta Tiwari" style="width: 115px; height: 115px;">
                 <p> Hello! I'm Shweta, a Frontend Developer in the making. I'm currently learning HTML, CSS, and JavaScript.  
                 I love creating user-friendly websites and aim to become a professional web developer or freelancer.  
                 I'm dedicated to learning and improving every day!</p>
@@ -43,19 +48,19 @@
                 <h2 class="section-heading">My Projects</h2>
                 <div class="projects-grid">
             <div class="project-card">
-                <h3>Student Report Card</h3>
-                <p>Displays student details and grades in a clean and simple layout.</p>   
-                <a href="https://studentreporttcard.netlify.app/">View Project</a>
+                <h3>My Developer Portfolio</h3>
+                <p>A simple portfolio website showcasing my skills and projects.</p>
+                <a href="https://myportfolio2302.netlify.app/" target="_blank">View Project</a>
             </div>
             <div class="project-card">
-                <h3>Calculator</h3>
-                <p>Basic calculator app with standard arithmetic operations and clean UI.</p>
-                <a href="#">View Project</a>
+                <h3>Restaurant Website</h3>
+                <p>A responsive restaurant website with a menu and contact form.</p>
+                <a href="https://restaurantwebsitesh.netlify.app/" target="_blank">View Project</a>
             </div>
             <div class="project-card">
-                <h3>To-Do List</h3>
-                <p>Task manager that allows users to add, remove and mark tasks as complete.</p>
-                <a href="#">View Project</a>
+                <h3>Travel Website</h3>
+                <p>A modern, responsive travel website designed to inspire your next adventure.</p>
+                <a href="https://travelwebsiteshweta.netlify.app/" target="_blank">View Project</a>
             </div>
             </div>
             </div>
@@ -63,18 +68,18 @@
         <section id="contact">
             <div class="container">
                 <h2>Contact Me</h2>
-            <form>
+            <form action="#" method="post">
                 <div>
                     <label for="name">Name:</label>
-                    <input type="text" id="name" name="name" required>               
+                    <input type="text" id="name" name="name" placeholder="Enter Your Name" required>               
                  </div>
                 <div>
                     <label for="email">Email:</label>
-                    <input type="email" id="email" name="email" required>
+                    <input type="email" id="email" name="email" placeholder="Enter Your Email" required>
                 </div>  
                 <div>
                     <label for="message">Message:</label>
-                    <textarea id="message" name="message" rows="2" required></textarea>
+                    <textarea id="message" name="message" rows="2" placeholder="Enter Your Message" required></textarea>
                 </div>
                 <div>
                     <button type="submit">Send Message</button>
@@ -87,8 +92,8 @@
         <footer>
             <p>&copy; 2023 Shweta Tiwari. All rights reserved.</p>
             <p>Follow me on
-                <a href="www.linkedin.com/in/shweta-tiwari-123456789" target="_blank">LinkedIn</a>,
-                <a href="www.github.com/shweta-tiwari" target="_blank">GitHub</a>, and
+                <a href="https://www.linkedin.com/in/shweta-tiwari-b31855298" target="_blank">LinkedIn</a>,
+                <a href="https://github.com/ShwetaTiwari2302" target="_blank">GitHub</a>, and
                 <a href="mailto:tiwarishweta2302@gmail.com">Email</a>
             </p>
         </footer>
